Search form integrated

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,7 @@
 <body>
 
 <!-- header section starts      -->
+<header>
  <a href="#" class="logo"><i class="fas fa-utensils"></i>resto.</a>
 
     <nav class="navbar">
@@ -29,6 +30,17 @@
         <a href="#" class="fas fa-heart"></a>
         <a href="#" class="fas fa-shopping-cart"></a>
     </div>
+</header>
+
+<!-- Header Section ends-->
+
+<!-- search form -->
+<form action="" id="search-form">
+    <input type="search" placeholder="search here..." name="" id="search-box">
+    <label for="search-box" class="fas fa-search"></label>
+    <i class="fas fa-times" id="close"></i>
+</form>
+
 
 </body>
 
