Changes in index page and menu page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,10 +13,10 @@
 
 <!-- header section starts      -->
 <header>
- <a href="#" class="logo"><i class="fas fa-utensils"></i>resto.</a>
+ <a href="/frontend/index.html" class="logo"><i class="fas fa-utensils"></i>resto.</a>
 
     <nav class="navbar">
-        <a class="active" href="#">home</a>
+        <a class="active" href="/frontend/index.html">home</a>
         <a href="#">dishes</a>
         <a href="#">about</a>
         <a href="/frontend/menu.html">menu</a>
