--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -13,13 +13,13 @@
 
 <!-- header section starts      -->
 <header>
- <a href="#" class="logo"><i class="fas fa-utensils"></i>resto.</a>
+ <a href="/frontend/index.html" class="logo"><i class="fas fa-utensils"></i>resto.</a>
 
     <nav class="navbar">
-        <a href="#">home</a>
+        <a href="/frontend/index.html">home</a>
         <a href="#">dishes</a>
         <a href="#">about</a>
-        <a href="/frontend/menu.html">menu</a>
+        <a class="active" href="/frontend/menu.html">menu</a>
         <a href="#">review</a>
         <a href="#">order</a>
     </nav>
