Dish section frontend is done and make dish section linkable from other section

--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar">
         <a href="/frontend/index.html">home</a>
-        <a href="#">dishes</a>
+        <a href="/frontend/dish.html">dishes</a>
         <a href="#">about</a>
         <a class="active" href="/frontend/menu.html">menu</a>
         <a href="#">review</a>
