--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
 
     <nav class="navbar">
         <a class="active" href="#">home</a>
-        <a href="#">dishes</a>
+        <a href="/frontend/dish.html">dishes</a>
         <a href="#">about</a>
         <a href="#">menu</a>
         <a href="#">review</a>
