--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
         <a class="active" href="#">home</a>
         <a href="/frontend/dish.html">dishes</a>
         <a href="#">about</a>
-        <a href="#">menu</a>
+        <a href="/frontend/menu.html">menu</a>
         <a href="#">review</a>
         <a href="#">order</a>
     </nav>
