added order link to required file

--- a/frontend/dish.html
+++ b/frontend/dish.html
@@ -24,7 +24,7 @@
         <a href="#">about</a>
         <a href="/frontend/menu.html">menu</a>
         <a href="#">review</a>
-        <a href="#">order</a>
+        <a href="/frontend/order.html">order</a>
     </nav>
 
     <div class="icons">
