--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -21,7 +21,7 @@
         <a href="#">about</a>
         <a class="active" href="/frontend/menu.html">menu</a>
         <a href="#">review</a>
-        <a href="#">order</a>
+        <a href="/frontend/order.html">order</a>
     </nav>
 
     <div class="icons">
