--- a/frontend/order.html
+++ b/frontend/order.html
@@ -47,7 +47,7 @@
         </div>
         <div class="inputBox">
             <div class="input">
-                <span>how musch</span>
+                <span>how much</span>
                 <label>
                     <input type="number" placeholder="how many orders">
                 </label>
