Working on review section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
         <a href="/frontend/dish.html">dishes</a>
         <a href="#">about</a>
         <a href="/frontend/menu.html">menu</a>
-        <a href="#">review</a>
+        <a href="/frontend/review.html">review</a>
         <a href="/frontend/order.html">order</a>
     </nav>
 
