--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -20,7 +20,7 @@
         <a href="/frontend/dish.html">dishes</a>
         <a href="#">about</a>
         <a class="active" href="/frontend/menu.html">menu</a>
-        <a href="#">review</a>
+        <a href="/frontend/review.html">review</a>
         <a href="/frontend/order.html">order</a>
     </nav>
 
