--- a/frontend/login.html
+++ b/frontend/login.html
@@ -37,6 +37,6 @@
 
 
 
-    <script src="{{ url_for('static', filename='js/script1.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/login.js') }}"></script>
 </body>
 </html>
