--- a/frontend/src/pages/order.html
+++ b/frontend/src/pages/order.html
@@ -7,9 +7,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Website </title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+
+    <!-- header section starts      -->
+<header>
+ <a href="./index.html" class="logo"><i class="fas fa-utensils"></i>resto.</a>
+
+    <nav class="navbar">
+        <a href="./index.html">home</a>
+        <a href="./dish.html">dishes</a>
+        <a href="#">about</a>
+        <a href="./menu.html">menu</a>
+        <a href="./review.html">review</a>
+        <a class="active" href="./order.html">order</a>
+    </nav>
+
+    <div class="icons">
+        <i class="fas fa-bars" id="menu-bars"></i>
+        <i class="fas fa-search" id="search-icon"></i>
+        <a href="#" class="fas fa-heart"></a>
+        <a href="#" class="fas fa-shopping-cart"></a>
+        <a href="./login.html" class="fas fa-user"></a>
+    </div>
+</header>
+
+<!-- Header Section ends-->
+
 <section class="order" id="order">
 
     <h3 class="sub-heading"> order now </h3>
@@ -76,7 +101,7 @@
 
 </section>
 
-<script src="static/js/order.js"></script>
+<script src="../js/order.js"></script>
 
 </body>
 
