--- a/frontend/src/pages/review.html
+++ b/frontend/src/pages/review.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
@@ -19,12 +19,12 @@
  <a href="#" class="logo"><i class="fas fa-utensils"></i>resto.</a>
 
     <nav class="navbar">
-        <a href="/frontend/index.html">home</a>
-        <a href="/frontend/dish.html">dishes</a>
+        <a href="./index.html">home</a>
+        <a href="./dish.html">dishes</a>
         <a href="#">about</a>
-        <a href="/frontend/menu.html">menu</a>
-        <a class="active" href="/frontend/review.html">review</a>
-        <a href="/frontend/order.html">order</a>
+        <a href="./menu.html">menu</a>
+        <a class="active" href="./review.html">review</a>
+        <a href="./order.html">order</a>
     </nav>
 
     <div class="icons">
@@ -32,6 +32,7 @@
         <i class="fas fa-search" id="search-icon"></i>
         <a href="#" class="fas fa-heart"></a>
         <a href="#" class="fas fa-shopping-cart"></a>
+        <a href="./login.html" class="fas fa-user"></a>
     </div>
 </header>
 
@@ -58,7 +59,7 @@
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="images/pic-1.png" alt="">
+                    <img src="../assets/image/pic-1.png" alt="">
                     <div class="user-info">
                         <h3>john deo</h3>
                         <div class="stars">
@@ -76,7 +77,7 @@
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="images/pic-2.png" alt="">
+                    <img src="../assets/image/pic-2.png" alt="">
                     <div class="user-info">
                         <h3>john deo</h3>
                         <div class="stars">
@@ -94,7 +95,7 @@
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="images/pic-3.png" alt="">
+                    <img src="../assets/image/pic-3.png" alt="">
                     <div class="user-info">
                         <h3>john deo</h3>
                         <div class="stars">
@@ -112,7 +113,7 @@
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="images/pic-4.png" alt="">
+                    <img src="../assets/image/pic-4.png" alt="">
                     <div class="user-info">
                         <h3>john deo</h3>
                         <div class="stars">
