--- a/frontend/src/pages/dish.html
+++ b/frontend/src/pages/dish.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
@@ -19,12 +19,12 @@
  <a href="#" class="logo"><i class="fas fa-utensils"></i>resto.</a>
 
     <nav class="navbar">
-        <a href="/frontend/index.html">home</a>
-        <a class="active" href="/frontend/dish.html">dishes</a>
+        <a href="./index.html">home</a>
+        <a class="active" href="./dish.html">dishes</a>
         <a href="#">about</a>
-        <a href="/frontend/menu.html">menu</a>
-        <a href="/frontend/review.html">review</a>
-        <a href="/frontend/order.html">order</a>
+        <a href="./menu.html">menu</a>
+        <a href="./review.html">review</a>
+        <a href="./order.html">order</a>
     </nav>
 
     <div class="icons">
@@ -32,6 +32,7 @@
         <i class="fas fa-search" id="search-icon"></i>
         <a href="#" class="fas fa-heart"></a>
         <a href="#" class="fas fa-shopping-cart"></a>
+        <a href="./login.html" class="fas fa-user"></a>
     </div>
 </header>
 
@@ -56,7 +57,7 @@
         <div class="box">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-eye"></a>
-            <img src="images/dish-1.png" alt="">
+            <img src="../assets/image/dish-1.png" alt="">
             <h3>tasty food</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -73,7 +74,7 @@
         <div class="box">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-eye"></a>
-            <img src="images/dish-2.png" alt="">
+            <img src="../assets/image/dish-2.png" alt="">
             <h3>tasty food</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -90,7 +91,7 @@
         <div class="box">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-eye"></a>
-            <img src="images/dish-3.png" alt="">
+            <img src="../assets/image/dish-3.png" alt="">
             <h3>tasty food</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -107,7 +108,7 @@
         <div class="box">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-eye"></a>
-            <img src="images/dish-4.png" alt="">
+            <img src="../assets/image/dish-4.png" alt="">
             <h3>tasty food</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -124,7 +125,7 @@
         <div class="box">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-eye"></a>
-            <img src="images/dish-5.png" alt="">
+            <img src="../assets/image/dish-5.png" alt="">
             <h3>tasty food</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -141,7 +142,7 @@
         <div class="box">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-eye"></a>
-            <img src="images/dish-6.png" alt="">
+            <img src="../assets/image/dish-6.png" alt="">
             <h3>tasty food</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
