--- a/frontend/src/pages/login.html
+++ b/frontend/src/pages/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login/Signup Form</title>
-     <link rel="stylesheet" href="css/login.css">
+     <link rel="stylesheet" href="../css/login.css">
      <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -13,7 +13,6 @@
   <body>
     <div class="container">
       <div class="form-box login">
-         
         <form action="#">
           <h1>Login</h1>
           <div class="input-box">
@@ -73,6 +72,6 @@
       </div>
     </div>
 
-    <script src="/js/login.js"></script>
+    <script src="../js/login.js"></script>
   </body>
 </html>
