--- a/frontend/src/pages/menu.html
+++ b/frontend/src/pages/menu.html
@@ -7,21 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Website </title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
 <!-- header section starts      -->
 <header>
- <a href="/frontend/index.html" class="logo"><i class="fas fa-utensils"></i>resto.</a>
+ <a href="./index.html" class="logo"><i class="fas fa-utensils"></i>resto.</a>
 
     <nav class="navbar">
-        <a href="/frontend/index.html">home</a>
-        <a href="/frontend/dish.html">dishes</a>
+        <a href="./index.html">home</a>
+        <a href="./dish.html">dishes</a>
         <a href="#">about</a>
-        <a class="active" href="/frontend/menu.html">menu</a>
-        <a href="/frontend/review.html">review</a>
-        <a href="/frontend/order.html">order</a>
+        <a class="active" href="./menu.html">menu</a>
+        <a href="./review.html">review</a>
+        <a href="./order.html">order</a>
     </nav>
 
     <div class="icons">
@@ -29,6 +29,7 @@
         <i class="fas fa-search" id="search-icon"></i>
         <a href="#" class="fas fa-heart"></a>
         <a href="#" class="fas fa-shopping-cart"></a>
+        <a href="./login.html" class="fas fa-user"></a>
     </div>
 </header>
 
@@ -52,7 +53,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="images/menu-1.jpg" alt="">
+                <img src="../assets/image/menu-1.jpg" alt="">
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
@@ -72,7 +73,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="images/menu-2.jpg" alt="">
+                <img src="../assets/image/menu-2.jpg" alt="">
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
@@ -92,7 +93,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="images/menu-3.jpg" alt="">
+                <img src="../assets/image/menu-3.jpg" alt="">
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
@@ -112,7 +113,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="images/menu-4.jpg" alt="">
+                <img src="../assets/image/menu-4.jpg" alt="">
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
@@ -132,7 +133,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="images/menu-5.jpg" alt="">
+                <img src="../assets/image/menu-5.jpg" alt="">
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
@@ -152,7 +153,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="images/menu-6.jpg" alt="">
+                <img src="../assets/image/menu-6.jpg" alt="">
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
@@ -172,7 +173,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="images/menu-7.jpg" alt="">
+                <img src="../assets/image/menu-7.jpg" alt="">
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
@@ -192,7 +193,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="images/menu-8.jpg" alt="">
+                <img src="../assets/image/menu-8.jpg" alt="">
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
@@ -212,7 +213,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="images/menu-9.jpg" alt="">
+                <img src="../assets/image/menu-9.jpg" alt="">
                 <a href="#" class="fas fa-heart"></a>
             </div>
             <div class="content">
