--- a/frontend/index.html
+++ b/frontend/index.html
@@ -592,6 +592,13 @@
 </section>
 
 <!-- order section ends -->
+<script src="/js/navbar.js"></script>
+<script src="/js/home.js"></script>
+<script src="/js/menu.js"></script>
+<script src="/js/cart.js"></script>
+<script src="/js/order.js"></script>
+<script src="/js/animations.js"></script>
+</body>
 
 <script>
   // function to load another HTML file
