--- a/frontend/src/pages/index.html
+++ b/frontend/src/pages/index.html
@@ -31,7 +31,7 @@
         <i class="fas fa-bars" id="menu-bars"></i>
         <i class="fas fa-search" id="search-icon"></i>
         <a href="#" class="fas fa-heart"></a>
-        <a href="#" class="fas fa-shopping-cart"></a>
+        <a href="./cart.html" class="fas fa-shopping-cart" id="open-cart"><span id="cart-count" class="cart-badge">0</span></a>
         <a href="./login.html" class="fas fa-user"></a>
     </div>
 </header>
@@ -598,7 +598,7 @@
 <script src="/js/cart.js"></script>
 <script src="/js/order.js"></script>
 <script src="/js/animations.js"></script>
-</body>
+
 
 <script>
   // function to load another HTML file
@@ -615,6 +615,14 @@
   loadHTML("dishes", "dish.html");
 //   loadHTML("file2", "contact.html");
 //   loadHTML("file3", "services.html");
+</script>
+
+<script>
+    document.getElementById("close-cart").addEventListener("click", () => {
+        document.getElementById("cart-panel").classList.remove("active");
+    });
+
+    document.addEventListener("DOMContentLoaded", loadCart);
 </script>
 
 </body>
